--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,6 +10,8 @@ galaxy_info:
 
   min_ansible_version: 2.4
 
+  github_branch: master
+
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
 
